# rust-axum-skeleton

./: Cargo.toml
src/: main.rs
src/config/: error.rs
src/controller/: example_controller.rs
src/domain/: example.rs
src/dto/: example_dto.rs
src/service/: example_service.rs  mod.rs  service_bag.rs
